--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -482,6 +482,12 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     font-weight: 300;
 }
 
+.widget{
+    margin-top: 25%;
+    padding-right: 20px;
+    background-color: #d9dbdd;
+}
+
 .features .feature-image,
 .features .feature-description,
 .titlebox,
