--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -14,11 +14,14 @@
       <script type="text/javascript" src="{{"js/search.js" | relURL}}"></script>
       </div> -->
    <div class="row">
-      <div class="col-lg-9 col-md-8 col-sm-7 col-xs-12">
+   	<div class="col-lg-9 col-md-8 col-sm-7 col-xs-12" id="search-results" style="display: none;">
+   		
+   	</div>
+      <div class="col-lg-9 col-md-8 col-sm-7 col-xs-12" id="post_nor">
          <div class="post type-post status-publish format-standard hentry category-design tag-memories tag-normal-post tag-standard-2 excerpt zoom full-without-featured excerpt">
             <div class='excerpt-intro excerpt-header'>
                <h2 class='excerpt-title'>
-                  <a> This is an Intro post </a>
+                  <a> scOrange blog </a>
                </h2>
             </div>
             <div class='excerpt-content'>
@@ -33,7 +36,7 @@
          {{ range $index, $element := .Paginator.Pages }}
          {{ if and (isset .Params "image") .Params.image }}
          {{ if eq (mod $index 2) 0 }}
-         <div class="post type-post status-publish format-standard has-post-thumbnail hentry category-design tag-memories tag-normal-post tag-standard-2 excerpt zoom full-without-featured odd excerpt">
+         <div class="post type-post status-publish format-standard has-post-thumbnail hentry category-design tag-memories tag-normal-post tag-standard-2 excerpt zoom full-without-featured odd excerpt" >
             {{ else }}
             <div class="post type-post status-publish format-standard has-post-thumbnail hentry category-design tag-memories tag-normal-post tag-standard-2 excerpt zoom full-without-featured even excerpt">
                {{ end }}
@@ -86,7 +89,10 @@
                <div class="hline-separator">
                </div>
                {{ end }}
+
             </div>
+
+
             <div class="col-lg-3 col-md-4 col-sm-5 col-xs-12" >
                <!-- {{ range $name, $taxonomy := .Site.Taxonomies.categories }}
                   <a href="{{ "/categories/" | relLangURL }}{{ $name | urlize }}">{{ $name }}({{.Count}})</a>
@@ -117,18 +123,68 @@
 
 
                <section class="panel panel-default">
-               	<!-- <div> -->
-               		<div class="input-group">
-				      <input type="text" data-search-input id="search-by"  class="form-control" placeholder="Search for...">
-				      <span class="input-group-btn">
-				        <button class="btn btn-default" type="button">Go!</button>
-				      </span>
-				    </div>
-				    
-				     
-				   <!-- <div class="searchbox">
-				      <input data-search-input id="search-by" type="text">
-				   </div> -->
+				    <div class="input-group example">
+					  <input type="text" data-search-input id="search-input"placeholder="Search.." name="search">
+					  <span class="input-group-btn">
+					  <button type="button" onclick="search_content()"><i class="fa fa-search"></i></button>
+					</span>
+				</div>
+				    <script type="text/javascript">
+				      function search_content(){
+				      	$("#post_nor").hide();
+				      	var param = document.getElementById('search-input').value;
+				      	var html_el = '<div class="post type-post status-publish format-standard hentry category-design tag-memories tag-normal-post tag-standard-2 excerpt zoom full-without-featured excerpt"><div class="excerpt-intro excerpt-header"><h2 class="excerpt-title"><a> Blog scorange</a></h2></div> <div class="excerpt-content"> <article> Search results for: <b>'+ param +'</b></article></div></div>';
+
+				      	var results  = search(param);
+				      	$("#search-results").show();
+				      	var search_results = document.getElementById('search-results')
+				     	search_results.innerHTML = "";
+				     	
+				      	for(var page in results){
+				      		if ( results[page].image != "<no value>"){
+				      			if (page % 2 == 0){
+				      				html_el += '<div class="post type-post status-publish format-standard has-post-thumbnail hentry category-design tag-memories tag-normal-post tag-standard-2 excerpt zoom full-without-featured odd excerpt" >'
+				      			}
+				      			else{
+				      				html_el += '<div class="post type-post status-publish format-standard has-post-thumbnail hentry category-design tag-memories tag-normal-post tag-standard-2 excerpt zoom full-without-featured even excerpt">'
+				      			}
+
+				      		}
+				      		else{
+				      			html_el += '<div class="post type-post status-publish format-standard hentry category-standard category-travel excerpt zoom full-without-featured odd excerpt">';
+
+				      		}
+
+				      		if ( results[page].thumbImage != "<no value>"){
+				      			html_el += '<a class="featured-image-link" href="' + results[page].uri+'"><div class="featured-image lazy lazy-bg-image"><img src="'+results[page].thumbImage +'"></div></a>';
+
+				      		}
+				      		else if (results[page].image != "<no value>"){
+				      			html_el += '<a class="featured-image-link" href="' + results[page].uri+'"><div class="featured-image lazy lazy-bg-image"><img src="'+results[page].image +'"></div></a>';
+				      		}
+				      		html_el += '<div class="excerpt-container"><div class="excerpt-meta"><span class="date"> 02 January</span>	<span> / </span>';
+				      		if (results[page].author != "<no value>") {
+
+				      			html_el += '<span class="author">'+results[page].author+'</span>';
+				      		}
+				      		if ( results[page].categories != "<no value>"){
+				      			for (categories in results[page].categories){
+				      				html_el += '<span> / </span><span class="category"><a href="/categories/'+ encodeURIComponent(results[page].categories[categories])+'">'+results[page].categories[categories]+'</a></span>';
+				      			}	
+				      		}
+				      		html_el += '</div> <div class="excerpt-header"><h2 class="excerpt-title"><a href="'+"test"+'"> '+results[page].title+' </a> </h2></div> <div class="excerpt-content"><article>';
+				      		if (results[page].excerpt != "<no value>" && results[page].excerpt != "" ){
+				      			html_el += results[page].excerpt
+				      		}
+				      		else{
+				      			html_el += results[page].summary
+				      		}
+				      		html_el += '<div class="more-link-wrapper"><a class="more-link" href="'+results[page].uri+'">Read the post<span class="screen-reader-text">This is a Standard Post</span></a></div></article></div> </div></div> <div class="hline-separator"></div> </div>';
+
+					    }
+					    search_results.innerHTML += html_el;
+					}
+				   </script>
 				   <script type="text/javascript" src="{{"js/lunr.min.js" | relURL}}"></script>
 				   <script type="text/javascript" src="{{"js/auto-complete.js" | relURL}}"></script>
 				   <link href="{{"css/auto-complete.css" | relURL}}" rel="stylesheet">
@@ -136,7 +192,6 @@
 				      var baseurl = "{{.Site.BaseURL}}";
 				   </script>
 				   <script type="text/javascript" src="{{"js/search.js" | relURL}}"></script>
-				<!-- </div> -->
 
                </section>
             </div>
