--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -1,5 +1,13 @@
 {{ define "main"}}
 <div class="container" style="background-color: white; padding-top: 120px;">
+	<div class="input-group example search-field">
+	  <input type="text" data-search-input id="search-input"placeholder="Search.." name="search">
+	  <span class="input-group-btn">
+	  	<button type="button" onclick="search_content()">
+	  		<i class="fa fa-search"></i>
+	  	</button>
+	  </span>
+	</div>
    <!-- <div>
       <div class="searchbox">
         <input data-search-input id="search-by" type="text">
@@ -14,23 +22,26 @@
       <script type="text/javascript" src="{{"js/search.js" | relURL}}"></script>
       </div> -->
    <div class="row">
-   	<div class="col-lg-9 col-md-8 col-sm-7 col-xs-12" id="search-results" style="display: none;">
+   	<div class="col-lg-12 col-md-8 col-sm-7 col-xs-12" id="search-results" style="display: none;">
    		
    	</div>
-      <div class="col-lg-9 col-md-8 col-sm-7 col-xs-12" id="post_nor">
+      <div class="col-lg-12 col-md-8 col-sm-7 col-xs-12" id="post_nor">
          <div class="post type-post status-publish format-standard hentry category-design tag-memories tag-normal-post tag-standard-2 excerpt zoom full-without-featured excerpt">
             <div class='excerpt-intro excerpt-header'>
-               <h2 class='excerpt-title'>
-                  <a> scOrange blog </a>
-               </h2>
+
+            	<!-- interactive_data_vis_01_scaled -->
+            	<div class="row">
+            		
+            		<div>
+            			<img style="width:300px;" src="/images/interactive_data_vis_01_scaled.png">
+		               <h2 class='entry-title '>
+		                  <a class="entry-title-intro"> scOrange blog </a>
+		               </h2>
+           			</div>
+		            
+        		</div>
             </div>
-            <div class='excerpt-content'>
-               <article>
-                  Summary <br>
-                  Some more text was required to see what this would properly look like <br>
-                  so here it is
-               </article>
-            </div>
+        
          </div>
          {{ $paginator := .Paginate (where (where .Pages "Type" "post") "IsPage" true) }}
          {{ range $index, $element := .Paginator.Pages }}
@@ -93,14 +104,14 @@
             </div>
 
 
-            <div class="col-lg-3 col-md-4 col-sm-5 col-xs-12" >
+            <!-- <div class="col-lg-3 col-md-4 col-sm-5 col-xs-12" > -->
                <!-- {{ range $name, $taxonomy := .Site.Taxonomies.categories }}
                   <a href="{{ "/categories/" | relLangURL }}{{ $name | urlize }}">{{ $name }}({{.Count}})</a>
                   {{ end }} -->
-               <section class="panel panel-default">
+               <!-- <section class="panel panel-default">
                   <div class="panel-heading">
                      <b>Categories</b>
-                     <!-- <div style="float: right"><a href="{{ "/categories/" | relLangURL }}">- full list -</a></div> -->
+                  
                   </div>
                   {{ if not (eq (len $.Site.Taxonomies.categories) 0) }}
                   {{ $fontUnit := "rem" }}
@@ -114,21 +125,20 @@
                      {{ $count := len $taxonomy.Pages }}
                      {{ $weigth := div (sub (math.Log $count) (math.Log $min)) (sub (math.Log $max) (math.Log $min)) }}
                      {{ $currentFontSize := (add $smallestFontSize (mul (sub $largestFontSize $smallestFontSize) $weigth) ) }}
-                     <!--Current font size: {{$currentFontSize}}-->
                      <a href="{{ "/categories/" | relLangURL }}{{ $name | urlize }}" style="font-size:{{$currentFontSize}}{{$fontUnit}}">{{ $name }}</a>
                      {{ end }}
                   </div>
                   {{ end }}
-               </section>
+               </section> -->
 
 
-               <section class="panel panel-default">
-				    <div class="input-group example">
+               <!-- <section class="panel panel-default"> -->
+				    <!-- <div class="input-group example">
 					  <input type="text" data-search-input id="search-input"placeholder="Search.." name="search">
 					  <span class="input-group-btn">
 					  <button type="button" onclick="search_content()"><i class="fa fa-search"></i></button>
 					</span>
-				</div>
+				</div> -->
 				    <script type="text/javascript">
 				      function search_content(){
 				      	
@@ -202,7 +212,7 @@
 				   <script type="text/javascript" src="{{"js/search.js" | relURL}}"></script>
 
                </section>
-            </div>
+            <!-- </div> -->
          </div>
       </div>
    </div>
