--- a/layouts/home/list.html
+++ b/layouts/home/list.html
@@ -31,9 +31,9 @@
                 <img alt="Blog mark" src="/images/blog-mark.svg">
             </div>
              </div>
-            <div class="row">
+            <div class="row center-block">
                 {{ range first 3 (where .Site.RegularPages.ByDate.Reverse "Section" "blog") }}
-                <div class="col-lg-4 col-md-5 col-xs-12 home-page-blog" >
+                <div class="col-lg-4 col-md-5 col-xs-12 home-page-blog" onclick="window.location.href = {{ .Permalink }}" style="cursor: pointer;" >
                 {{ if and (isset .Params "image") .Params.image }}
                 
                     <div class="post type-post status-publish format-standard has-post-thumbnail hentry category-design tag-memories tag-normal-post tag-standard-2 excerpt zoom full-without-featured excerpt" >
@@ -44,11 +44,11 @@
                   
                   <div class="excerpt-container2 blog-home">
                      <div class="excerpt-meta">
-                        <span class="date">{{ .Date.Format "02 January" }}</span>   <span> / </span>
+                        <span class="date">{{ .Date.Format "02 January" }}</span>   <span>  </span>
                         {{ if and (isset .Site.Params "author") .Site.Params.author }}
                         <span class="author">
                         {{ if and (isset .Site.Params "authorlink") .Site.Params.authorLink }}
-                        <a href="{{ .Site.Params.authorLink | default "" | absURL }}" title="Posts by {{ .Site.Params.author | default "" }}" rel="author">{{ .Site.Params.author  | default "" }}</a>
+                        <a href="{{ .Site.Params.authorLink | default "" | absURL }}" title="Posts by {{ .Site.Params.author | default "" }}" rel="author">/{{ .Site.Params.author  | default "" }}</a>
                         {{ else }}
                         {{ .Site.Params.author | default "" }}
                         {{ end }}
