--- a/static/css/custom_blog.css
+++ b/static/css/custom_blog.css
@@ -619,7 +619,7 @@ a img {
   overflow: hidden;
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
-  margin-bottom: 1.5em;
+  /*margin-bottom: 1.5em;*/
 }
 
 .featured-image {
@@ -654,6 +654,13 @@ a img {
   width: 20%;
   opacity: 0.6;
   border: 2px solid #4d4d4d;
+}
+.intro-separator{
+  width: 50%;
+}
+
+.search-separator{
+  width: 30%;
 }
 
 .hline-separator:last-child {
@@ -785,7 +792,7 @@ a img {
   .excerpt {
     /*background: #110800;*/
     background: #ffffff;
-    margin-bottom: 1.5em;
+    /*margin-bottom: 1.5em;*/
   }
   .excerpt:first-child {
     padding-top: 0;
@@ -822,8 +829,8 @@ a img {
     position: relative;
     clear: both;
     padding: 0;
-    margin-bottom: 3.5em;
-    margin-top: 3.5em;
+    margin-bottom: 0;
+    /*margin-top: 3.5em;*/
     /*opacity: 0.8;*/
   }
 
