Footer updated - privacy and license pages added

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -9,10 +9,10 @@
                         <div class="col-sm-4 sitemap-group">
                             <ul class="links list-sitemap">
                                 <li><b><a class="sitemap-cat" href="/">Orange</a></b></li>
-                                <li><a class="sitemap-sub" href="{% url 'license' %}">License</a></li>
-                                <li><a class="sitemap-sub" href="{% url 'privacy' %}">Privacy Policy</a></li>
-                                <li><a class="sitemap-sub" href="{% url 'citation' %}">Citation</a></li>
-                                <li><a class="sitemap-sub" href="{% url 'contact' %}">Contact</a></li>
+                                <li><a class="sitemap-sub" href="/license/">License</a></li>
+                                <li><a class="sitemap-sub" href="/privacy/">Privacy Policy</a></li>
+                                <li><a class="sitemap-sub" href="/citation/">Citation</a></li>
+                                <li><a class="sitemap-sub" href="/contact/">Contact</a></li>
                             </ul>
                         </div>
 
