--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -18,10 +18,10 @@
 
                         <div class="col-sm-4 sitemap-group">
                             <ul class="links list-sitemap">
-                                <li><a class="sitemap-cat" href="{% url 'download' %}">Download</a></li>
-                                <li><a class="sitemap-sub" href="{% url 'download' %}windows/">Windows</a></li>
-                                <li><a class="sitemap-sub" href="{% url 'download' %}mac-os-x/">Mac OS</a></li>
-                                <li><a class="sitemap-sub" href="{% url 'download' %}linux/">Linux</a></li>
+                                <li><a class="sitemap-cat" href="/download/">Download</a></li>
+                                <li><a class="sitemap-sub" href="/download/">Windows</a></li>
+                                <li><a class="sitemap-sub" href="/download/">Mac OS</a></li>
+                                <li><a class="sitemap-sub" href="/download/">Linux</a></li>
                             </ul>
                         </div>
 
@@ -47,7 +47,7 @@
                             <ul class="links list-sitemap">
                                 <li><a class="sitemap-cat" href="{% url 'faq' %}">FAQ</a></li>
                                 <li><a class="sitemap-cat" href="{% url 'docs' %}">Documentation</a></li>
-                                <li><a class="sitemap-sub" href="{% url 'start' %}">Get started</a></li>
+                                <li><a class="sitemap-sub" href="{{"getting-started" | urlize}}">Get started</a></li>
                                 <li><a class="sitemap-sub" href="{% url 'toolbox' %}">Widgets</a></li>
                                 <li><a class="sitemap-sub" href="http://docs.orange.biolab.si/3/data-mining-library/">Scripting</a></li>
                             </ul>
