Citation added md content file

--- a/layouts/citation/list.html
+++ b/layouts/citation/list.html
@@ -7,25 +7,8 @@
             <div class="col-md-12 col-sm-12 col-xs-12">
                 <h1 class="title">How to Cite</h1>
                 <div class="content">
-                    <p>If you are using Orange in your research, please cite:</p>
-                    <p>Demsar J, Curk T, Erjavec A, Gorup C, Hocevar T, Milutinovic M, Mozina M, Polajnar M, Toplak M, Staric A, Stajdohar M, Umek L, Zagar L, Zbontar J, Zitnik M, Zupan B (2013) <a href="http://jmlr.org/papers/volume14/demsar13a/demsar13a.pdf">Orange: Data Mining Toolbox in Python</a>. Journal of Machine Learning Research 14(Aug):2349−2353.</p>
-                    <p>BibTeX entry:</p>
-<pre>@article{JMLR:demsar13a,
-  author  = {Janez Dem\v{s}ar and Toma\v{z} Curk and Ale\v{s} Erjavec and \v{C}rt Gorup and
-             Toma\v{z} Ho\v{c}evar and Mitar Milutinovi\v{c} and Martin Mo\v{z}ina and Matija Polajnar and
-             Marko Toplak and An\v{z}e Stari\v{c} and Miha \v{S}tajdohar and Lan Umek and
-             Lan \v{Z}agar and Jure \v{Z}bontar and Marinka \v{Z}itnik and Bla\v{z} Zupan},
-  title   = {Orange: Data Mining Toolbox in Python},
-  journal = {Journal of Machine Learning Research},
-  year    = {2013},
-  volume  = {14},
-  pages   = {2349-2353},
-  url     = {http://jmlr.org/papers/v14/demsar13a.html}
-}
-</pre>
-                    <p>Orange is developed by <a href="http://www.biolab.si">Bioinformatics Lab</a> at University of Ljubljana, Slovenia, in collaboration with <a href="{% url 'community' %}" title="Community">open source community</a>.</p>
-                    <p>Orange is an open source project. If you include it within your programs, please comply with the <a href="{% url 'license' %}" title="License">license</a>. <a href="{% url 'contact' %}" title="Contact">Contact us</a> if you would like to use Orange under other licenses.</p>
-                </div>
+                  {{.Content}}
+                </div> 
             </div>
         </div>
     </div>
