--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -47,7 +47,7 @@
                             <ul class="links list-sitemap">
                                 <li><a class="sitemap-cat" href="{% url 'faq' %}">FAQ</a></li>
                                 <li><a class="sitemap-cat" href="{% url 'docs' %}">Documentation</a></li>
-                                <li><a class="sitemap-sub" href="{{"getting-started" | urlize}}">Get started</a></li>
+                                <li><a class="sitemap-sub" href="/{{"getting-started" | urlize}}/">Get started</a></li>
                                 <li><a class="sitemap-sub" href="{% url 'toolbox' %}">Widgets</a></li>
                                 <li><a class="sitemap-sub" href="http://docs.orange.biolab.si/3/data-mining-library/">Scripting</a></li>
                             </ul>
