--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,75 +1,76 @@
 
 <footer class="footer">
-        <div class="container">
-            <div class="row">
+    <div class="container">
+        <div class="row">
 
-                <div class="col-md-4 col-sm-6 col-xs-12">
-                    <div class="row">
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="row">
 
-                        <div class="col-sm-4 sitemap-group">
-                            <ul class="links list-sitemap">
-                                <li><b><a class="sitemap-cat" href="/">Orange</a></b></li>
-                                <li><a class="sitemap-sub" href="/license/">License</a></li>
-                                <li><a class="sitemap-sub" href="/privacy/">Privacy Policy</a></li>
-                                <li><a class="sitemap-sub" href="/citation/">Citation</a></li>
-                                <li><a class="sitemap-sub" href="/contact/">Contact</a></li>
-                            </ul>
-                        </div>
+                    <div class="col-sm-4 sitemap-group">
+                        <ul class="links list-sitemap">
+                            <li><b><div class="sitemap-cat" href="/">About</div></b></li>
+                            <li><a class="sitemap-sub" href="/license/">License</a></li>
+                            <li><a class="sitemap-sub" href="/privacy/">Privacy</a></li>
+                            <li><a class="sitemap-sub" href="/citation/">Citation</a></li>
+                            <li><a class="sitemap-sub" href="/contact/">Contact</a></li>
+                        </ul>
+                    </div>
 
-                        <div class="col-sm-4 sitemap-group">
-                            <ul class="links list-sitemap">
-                                <li><a class="sitemap-cat" href="/download/">Download</a></li>
-                                <li><a class="sitemap-sub" href="/download/">Windows</a></li>
-                                <li><a class="sitemap-sub" href="/download/">Mac OS</a></li>
-                                <li><a class="sitemap-sub" href="/download/">Linux</a></li>
-                            </ul>
-                        </div>
+                    <div class="col-sm-4 sitemap-group">
+                        <ul class="links list-sitemap">
+                            <li><div class="sitemap-cat" href="/download/">Download</div></li>
+                            <li><a class="sitemap-sub" href="/download/">Windows</a></li>
+                            <li><a class="sitemap-sub" href="/download/">Mac OS</a></li>
+                            <li><a class="sitemap-sub" href="/download/">Linux</a></li>
+                        </ul>
+                    </div>
 
-                        <div class="col-sm-4 sitemap-group">
+                    <div class="col-sm-4 sitemap-group">
 
-                            <ul class="links list-sitemap">
-                                <li><b><a class="sitemap-cat" href="{% url 'community' %}">Community</a></b></li>
-                                <li><a class="sitemap-sub" href="https://datascience.stackexchange.com/questions/tagged/orange">Stack Exchange</a></li>
-                                <li><a class="sitemap-sub" href="https://www.facebook.com/orangedm">Facebook</a></li>
-                                <li><a class="sitemap-sub" href="https://www.youtube.com/channel/UClKKWBe2SCAEyv7ZNGhIe4g">YouTube</a></li>
-                                <li><a class="sitemap-sub" href="https://twitter.com/orangedataminer">@OrangeDataMiner</a></li>
-                            </ul>
+                        <ul class="links list-sitemap">
+                            <li><b><div class="sitemap-cat" href="{% url 'community' %}">Community</div></b></li>
+                            <li><a class="sitemap-sub" href="https://www.youtube.com/channel/UClKKWBe2SCAEyv7ZNGhIe4g">YouTube</a></li>
+                            <li><a class="sitemap-sub" href="https://datascience.stackexchange.com/questions/tagged/orange">Stack Exchange</a></li>
+                            <li><a class="sitemap-sub" href="https://www.facebook.com/orangedm">Facebook</a></li>
+                            <li><a class="sitemap-sub" href="https://twitter.com/orangedataminer">Twitter</a></li>
+                        </ul>
 
-                        </div>
+                    </div>
 
-                    </div><!--//row-->
-                </div>
+                </div><!--//row-->
+            </div>
 
-                <div class="col-md-3 col-sm-6 col-xs-12">
-                    <div class="row">
+            <div class="col-md-3 col-sm-4 col-xs-12">
+                <div class="row">
 
-                        <div class="col-sm-6 sitemap-group docs-devs">
-                            <ul class="links list-sitemap">
-                                <li><a class="sitemap-cat" href="{% url 'faq' %}">FAQ</a></li>
-                                <li><a class="sitemap-cat" href="{% url 'docs' %}">Documentation</a></li>
-                                <li><a class="sitemap-sub" href="/{{"getting-started" | urlize}}/">Get started</a></li>
-                                <li><a class="sitemap-sub" href="{% url 'toolbox' %}">Widgets</a></li>
-                                <li><a class="sitemap-sub" href="http://docs.orange.biolab.si/3/data-mining-library/">Scripting</a></li>
-                            </ul>
-                        </div>
+                    <div class="col-sm-6 sitemap-group docs-devs">
+                        <ul class="links list-sitemap">
+                            <li><div class="sitemap-cat" href="{% url 'docs' %}">Documentation</div></li>
 
-                        <div class="col-sm-6 sitemap-group">
-                            <ul class="links list-sitemap">
-                                <li><b><a class="sitemap-cat" href="https://github.com/biolab/orange3">Developers</a></b></li>
-                                <li><a class="sitemap-sub" href="https://github.com/biolab/orange3">GitHub</a></li>
-                                <li><a class="sitemap-sub" href="{% url 'contribute' %}">Contribute</a></li>
-                            </ul>
-                        </div>
+                            <li><a class="sitemap-sub" href="/{{"getting-started" | urlize}}/">Get started</a></li>
+                            <li><a class="sitemap-sub" href="{% url 'toolbox' %}">Widgets</a></li>
+                            <li><a class="sitemap-sub" href="http://docs.orange.biolab.si/3/data-mining-library/">Scripting</a></li>
+                            <li><a class="sitemap-sub" href="{% url 'faq' %}">FAQ</a></li>
+                        </ul>
+                    </div>
 
-                    </div><!--//row-->
-                </div>
+                    <div class="col-sm-6 sitemap-group">
+                        <ul class="links list-sitemap">
+                            <li><b><div class="sitemap-cat" href="https://github.com/biolab/orange3">Developers</div></b></li>
+                            <li><a class="sitemap-sub" href="https://github.com/biolab/orange3">GitHub</a></li>
+                            <li><a class="sitemap-sub" href="{% url 'contribute' %}">Contribute</a></li>
+                        </ul>
+                    </div>
 
-            </div><!--//row-->
+                </div><!--//row-->
+            </div>
 
-            <div class="row">
-                <div class="col-xs-12">
-                    <small class="copyright pull-left">Copyright © University of Ljubljana</small>
-                </div>
+        </div><!--//row-->
+
+        <div class="row">
+            <div class="col-xs-12">
+                <small class="copyright pull-left">Copyright © University of Ljubljana</small>
             </div>
         </div>
-    </footer>
+    </div>
+</footer>
