Footer updated, added FAQ page, contact page, footer pages-padding fixed

--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -1,7 +1,7 @@
 {{ define "main"}}
 <div class="container" style="background-color: white; padding-top: 120px;">
 	<div class="input-group example search-field">
-	  <input type="text" data-search-input id="search-input"placeholder="Search.." name="search">
+	  <input type="text" data-search-input id="search-input"placeholder="Search..." name="search">
 	  <span class="input-group-btn">
 	  	<button type="button" onclick="search_content()">
 	  		<i class="fa fa-search"></i>
