--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3620,6 +3620,10 @@ li.pingback:first-child {
   font-size:21px; 
 
 }
+
+.padding-bottom{
+  padding-bottom: 50px
+}
       
 
 /*.example button:hover {
