--- a/layouts/license/list.html
+++ b/layouts/license/list.html
@@ -1,10 +1,10 @@
 {{ define "main"}}
 
-<section id="features" class="features section ">
+<section id="features" class="features section padding-bottom">
     <div class="container">
         <div class="row">
             <div class="col-md-12 col-sm-12 col-xs-12">
-                <h1 class="title">License</h1>
+                <h2 class="title">License</h2>
                 <div class="content">
 
                   {{.Content}}
