--- a/layouts/privacy/list.html
+++ b/layouts/privacy/list.html
@@ -1,10 +1,10 @@
 {{ define "main"}}
 
-<section id="features" class="features section ">
+<section id="features" class="features section padding-bottom">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 col-sm-12 col-xs-12">
-                    <h1 class="title">Privacy Policy</h1>
+                    <h2 class="title">Privacy Policy</h2>
                     <div class="content">
                         {{.Content}}
                     </div>
@@ -12,8 +12,5 @@
             </div>
         </div>
     </section>
-
-
-
 
 {{end}}
