--- a/layouts/download/list.html
+++ b/layouts/download/list.html
@@ -1,13 +1,13 @@
 {{ define "main"}}
-<section id="features" class="features section custom-reduce-padding-2 downloads">
-        <div class="container" style="margin-top: 80px">
+<section id="features" class="features section downloads">
+        <div class="container" style="margin-top: 40px">
             <div class="row">
-                <div class="col-lg-offset-1 col-lg-10 col-md-12 col-sm-12 col-xs-12">
+                <div class="col-lg-10 col-md-12 col-sm-12 col-xs-12">
                     {{ range .Site.Data.tabs}}
-                    <div class="icon-item col-md-4 col-sm-4 col-xs-12 text-center">
-                        <a href="/download/{{ .os }}/">
+                    <div class="icon-item col-md-3 col-sm-3 col-xs-12 text-center">
+                        <a onclick="windows({{.os}})">
                             <div class="icon{{ if eq os .os }}-selected{{end}}">
-                                <i class="fa fa-{{ .icon }} jsonly"></i>
+                                <i class="fa fa-{{ .icon }} jsonly icon-button"></i>
                             </div><!--//icon-->
                             <h2 class="content title">{{ .title }}</h2>
                         </a>
@@ -17,27 +17,50 @@
             </div><!--//row-->
         </div><!--//container-->
 
-        <div class="container-fluid background-features download-container">
-            <div class="container ">
-<!--             <div class="row">
- -->                <div class="faq-col col-md-12 col-sm-12 col-xs-12">
+        <div class="container-fluid download-container">
+            <div id="windows" class="container download-os ">
+                <div class="faq-col col-md-12 col-sm-12 col-xs-12">
                     <div class="content">
                         <h2>Download the latest version for Windows</h2>
-                        <a id="recommended-download" style="margin-top: 10px" class="btn btn-warning big-button-base" href="">
+                        <a id="recommended-download" style="margin-top: 10px" class="btn btn-warning big-button-base" onclick="windows()" href="https://singlecell.biolab.si/install/?os=windows">
                             Download scOrange
                         </a>
 
                         <h3><a id="standalone"></a>Standalone installer</h3>
-                        <a href="">scOrange-0.1.0-Python36-win_amd64.exe (64 bit)</a><br />
+                        <a href="https://singlecell.biolab.si/install/?os=windows">scOrange-win_amd64.exe (64 bit)</a><br />
                         <p>Can be used without administrative priviledges.</p>
 
                     </div>
-                <!-- </div> -->
+            </div>
+        </div>
+
+        <div id="mac" class="container mac download-os">
+                 <div class="faq-col col-md-12 col-sm-12 col-xs-12">
+                    <div class="content">
+                        <h2>Download the latest version for Mac</h2>
+                        <a id="recommended-download" onclick="mac()"style="margin-top: 10px" class="btn btn-warning big-button-base" href="https://singlecell.biolab.si/install/?os=mac">
+                            Download scOrange
+                        </a>
+                        <h3><a id="standalone"></a>Bundle</h3>
+                        <a href="https://singlecell.biolab.si/install/?os=mac">scOrange.dmg</a><br/>
+                        <p>A universal bundle with everything packed in and ready to use.</p>
+                    </div>
             </div>
         </div>
 
         </div>
-        
+        <script type="text/javascript">
+            function windows(os) {
+                if (os =="windows"){
+                    $("#mac").hide();
+                    $("#windows").show();
+                }
+                else if( os == "macos"){
+                    $("#windows").hide();
+                    $("#mac").show();
+                }
+            }
+        </script>
     </section>
 
 {{ end }}
