Blog view update

--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -17,7 +17,7 @@
             <div class='excerpt-intro excerpt-header'>
             	<div class="row">            		
             		<div>
-            			<img style="width:300px;" src="/images/interactive_data_vis_01_scaled.png">
+            			<!-- <img style="width:300px;" src="/images/interactive_data_vis_01_scaled.png"> -->
 		               <h2 class='feature-title entry-title-intro'>
 		                  scOrange Blog
 		               </h2>
