Documentation page redesign

--- a/layouts/docs/list.html
+++ b/layouts/docs/list.html
@@ -1,15 +1,16 @@
 {{ define "main"}}
 
 <section id="documentation" class="features section custom-reduce-padding-2">
-    <div class="container">
+    <div class="container" style="background-color: white;">
         <div class="row">
             <div class="col-md-12 col-sm-12 col-xs-12">
                 <h1 class="title">{{ .Title }}</h1>
                     <div class="content">
                     {{ range .Pages.ByWeight }}
-                        <div class="col-md-4 col-xs-12 doc-section">
-                            <img class="docs-image" src="{{ .Params.image }}">
-                            <h2>{{.Title}}</h2>
+                        <div class="col-md-12 col-xs-12 doc-section" >
+                            <img class="docs-image" src="{{ .Params.image }}" style="margin-bottom: 30px;">
+
+                            <!-- <h2>{{.Title}}</h2> -->
                             {{ .Content }}
                         </div>
                     {{ end }}
