--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -527,15 +527,25 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 .doc-section {
     text-align: center;
     margin-bottom: 50px;
+    font-size: 22px;
 }
 
 .doc-section img {
     margin: 0 auto;
+    height: 220px;
+}
+
+.doc-section h2 {
+    font-size: 30px;
 }
 
 .doc-section a {
     display: block;
     line-height: 1.5em;
+}
+
+.features h1{
+    font-size: 34px;
 }
 
 .faq p{
