--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -16,10 +16,11 @@
         {{ end }}
         
         <div class="entry-meta">
-          <span class="date">{{ .Date.Format "02 January" }}</span>	<span> / </span>
+          <span class="date">{{ .Date.Format "02 January" }}</span>	<span>  </span>
 
           <span class="author">
-            {{ if and (isset .Site.Params "authorlink") .Site.Params.authorLink }}
+            {{ if and (isset .Site.Params "author") .Site.Params.author }}
+
             <a href="{{ .Site.Params.authorLink | default "" | absURL}}" title="Posts by {{ .Site.Params.author | default "" }}" rel="author">{{ .Site.Params.author | default ""}}</a>
             {{ else }}
             {{ .Site.Params.author | default "" }}
