Updated privacy, license and citation page

--- a/layouts/license/list.html
+++ b/layouts/license/list.html
@@ -1,10 +1,10 @@
 {{ define "main"}}
 
 <section id="features" class="features section padding-bottom">
-    <div class="container">
+    <div class="container page-background">
         <div class="row">
             <div class="col-md-12 col-sm-12 col-xs-12">
-                <h2 class="title">License</h2>
+                <h1 class="title">License</h1>
                 <div class="content">
                   {{.Content}}
                 </div>
@@ -12,5 +12,4 @@
         </div>
     </div>
 </section>
-
-    {{end}}
+{{end}}
