--- a/layouts/privacy/list.html
+++ b/layouts/privacy/list.html
@@ -1,11 +1,11 @@
 {{ define "main"}}
 
 <section id="features" class="features section padding-bottom">
-        <div class="container">
+        <div class="container page-background">
             <div class="row">
                 <div class="col-md-12 col-sm-12 col-xs-12">
-                    <h2 class="title">Privacy Policy</h2>
-                    <div class="content">
+                    <h1 class="title">Privacy Policy</h1>
+                    <div class="content privacy">
                         {{.Content}}
                     </div>
                 </div>
