--- a/layouts/citation/list.html
+++ b/layouts/citation/list.html
@@ -1,7 +1,7 @@
 {{ define "main"}}
 
 <section id="features" class="features section">
-    <div class="container">
+    <div class="container page-background">
         <div class="row">
             <div class="col-md-12 col-sm-12 col-xs-12">
                 <h1 class="title">How to Cite</h1>
