--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -555,6 +555,13 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 .faq pre{
     margin-left: 20px !important;
 }
+
+.privacy p{
+    padding-left: 20px !important;
+}
+.privacy h5 {
+    font-size: 16px;
+}
 .nopadding {
     padding: 0 !important;
     margin: 0 !important;
